cinnamon: Fix text-shadow on menu-category-button
Selected menu-category-button had light text-shadow that made the
text look blurry on dark variant. Using 'text-shadow: none;' had no
effect for some reason, so set fully transparent shadow.

--- a/common/cinnamon/4.0/sass/_common.scss
+++ b/common/cinnamon/4.0/sass/_common.scss
@@ -1141,6 +1141,7 @@ StScrollBar {
 
     &-selected {
       padding: 7px;
+      text-shadow: 0 0 0 rgba(0,0,0,0);
       @extend %button:hover;
     }
     &-greyed {
